# algoleague

./: Cargo.toml  README.md  flake.nix
src/: lib.rs
