[package]
name = "algoleague"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Client library for the competitive programming website algoleague.com"

[dependencies]
async-stream = "0.3.6"
chrono = { version = "0.4.44", features = ["serde"] }
futures = "0.3.32"
reqwest = { version = "0.13.4", features = ["form", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
url = "2.5.8"
